--- a/css/plugins/code_view.css
+++ b/css/plugins/code_view.css
@@ -36,6 +36,8 @@ textarea.fr-code {
   display: block;
 }
 .fr-box.fr-code-view.fr-inline {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 .fr-box.fr-code-view .fr-element,
@@ -53,6 +55,8 @@ textarea.fr-code {
   position: absolute;
   top: 0;
   right: 0;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   display: none;
   background: #ffffff;
@@ -64,10 +68,10 @@ textarea.fr-code {
   cursor: pointer;
   text-align: left;
   padding: 11px 11.5px;
-  -webkit-transition: background linear 0.1s;
-  -moz-transition: background linear 0.1s;
-  -ms-transition: background linear 0.1s;
-  -o-transition: background linear 0.1s;
+  -webkit-transition: background 0.2s ease 0s;
+  -moz-transition: background 0.2s ease 0s;
+  -ms-transition: background 0.2s ease 0s;
+  -o-transition: background 0.2s ease 0s;
   border-radius: 0;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
