--- a/css/plugins/line_breaker.css
+++ b/css/plugins/line_breaker.css
@@ -16,6 +16,8 @@
   display: none;
 }
 .fr-line-breaker a {
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 100%;
   -moz-border-radius: 100%;
@@ -37,7 +39,7 @@
   -o-transition: background 0.2s ease 0s, color 0.2s ease 0s;
 }
 .fr-line-breaker a:hover {
-  background: #353535;
+  background: #222222;
   color: #ffffff;
   cursor: pointer;
 }
