Fixes froala/wysiwyg-editor#742.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -76,6 +76,10 @@
 .fr-view a.fr-green {
   color: green;
 }
+.fr-view span.fr-emoticon {
+  font-weight: normal;
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
+}
 /**
  * Image style.
  */
