--- a/css/plugins/emoticons.css
+++ b/css/plugins/emoticons.css
@@ -14,4 +14,6 @@
   padding: 5px;
   line-height: 1;
   cursor: default;
+  font-weight: normal;
+  font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
 }
