--- a/css/plugins/video.css
+++ b/css/plugins/video.css
@@ -26,6 +26,7 @@
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
+  max-width: 100%;
 }
 .fr-box .fr-video-resizer {
   position: absolute;
