Fixes froala/wysiwyg-editor#813.

--- a/css/froala_style.css
+++ b/css/froala_style.css
@@ -153,6 +153,7 @@ img.fr-bordered {
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   max-width: 100%;
+  border: none;
 }
 .fr-video.fr-dvb {
   display: block;
