--- a/css/plugins/video.css
+++ b/css/plugins/video.css
@@ -8,7 +8,15 @@
   display: block;
   content: "";
 }
-.fr-video:after {
+.fr-element .fr-video {
+  user-select: none;
+  -o-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+.fr-element .fr-video:after {
   position: absolute;
   content: '';
   z-index: 1;
@@ -18,15 +26,16 @@
   bottom: 0;
   cursor: pointer;
 }
-.fr-video.fr-active > * {
+.fr-element .fr-video.fr-active > * {
   z-index: 2;
   position: relative;
 }
-.fr-video > * {
+.fr-element .fr-video > * {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
   max-width: 100%;
+  border: none;
 }
 .fr-box .fr-video-resizer {
   position: absolute;
